// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components / AppPlaceholder Basic 1`] = `
<div
  className="pf-l-bullseye"
>
  <div
    className="pf-u-display-flex pf-u-flex-direction-column"
  >
    <div>
      <span
        aria-valuetext="Loading..."
        className="pf-c-spinner pf-m-xl"
        role="progressbar"
      >
        <span
          className="pf-c-spinner__clipper"
        />
        <span
          className="pf-c-spinner__lead-ball"
        />
        <span
          className="pf-c-spinner__tail-ball"
        />
      </span>
    </div>
    <div
      className="pf-c-content"
    >
      <h3>
        Loading...
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components / ConditionalRender When False 1`] = `"I'm the content"`;

exports[`Storyshots Components / ConditionalRender When True 1`] = `"Loading..."`;

exports[`Storyshots Components / SimplePageSection Only Title 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-c-content"
  >
    <h1
      className=""
      data-pf-content={true}
    >
      my title
    </h1>
  </div>
</section>
`;

exports[`Storyshots Components / SimplePageSection With Description 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-c-content"
  >
    <h1
      className=""
      data-pf-content={true}
    >
      my title
    </h1>
    <small
      className=""
      data-pf-content={true}
    >
      my description
    </small>
  </div>
</section>
`;

exports[`Storyshots Components / Welcome Basic 1`] = `
<div
  className="pf-c-empty-state pf-m-lg"
>
  <div
    className="pf-c-empty-state__content"
  >
    <svg
      aria-hidden="true"
      aria-labelledby={null}
      className="pf-c-empty-state__icon"
      fill="currentColor"
      height="1em"
      role="img"
      style={
        Object {
          "verticalAlign": "-0.125em",
        }
      }
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M505.12019,19.09375c-1.18945-5.53125-6.65819-11-12.207-12.1875C460.716,0,435.507,0,410.40747,0,307.17523,0,245.26909,55.20312,199.05238,128H94.83772c-16.34763.01562-35.55658,11.875-42.88664,26.48438L2.51562,253.29688A28.4,28.4,0,0,0,0,264a24.00867,24.00867,0,0,0,24.00582,24H127.81618l-22.47457,22.46875c-11.36521,11.36133-12.99607,32.25781,0,45.25L156.24582,406.625c11.15623,11.1875,32.15619,13.15625,45.27726,0l22.47457-22.46875V488a24.00867,24.00867,0,0,0,24.00581,24,28.55934,28.55934,0,0,0,10.707-2.51562l98.72834-49.39063c14.62888-7.29687,26.50776-26.5,26.50776-42.85937V312.79688c72.59753-46.3125,128.03493-108.40626,128.03493-211.09376C512.07526,76.5,512.07526,51.29688,505.12019,19.09375ZM384.04033,168A40,40,0,1,1,424.05,128,40.02322,40.02322,0,0,1,384.04033,168Z"
      />
    </svg>
    <h4
      className="pf-c-title pf-m-lg"
    >
      Welcome to XSender
    </h4>
    <div
      className="pf-c-empty-state__body"
    >
      XSender helps you to send your XML files to the SUNAT on a large-scale. Start by creating a company for your XMLs.
    </div>
    <button
      aria-disabled={false}
      aria-label={null}
      className="pf-c-button pf-m-primary"
      data-ouia-component-id="OUIA-Generated-Button-primary-1"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe={true}
      disabled={false}
      role={null}
      type="button"
    >
      Create company
    </button>
    <div
      className="pf-c-empty-state__secondary"
    >
      To learn more, visit the
      <a
        href="https://project-openubl.github.io"
        rel="noopener noreferrer"
        target="_blank"
      >
        documentation.
      </a>
    </div>
  </div>
</div>
`;
